# Bot-Sinais-trade

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260503_0001_create_methods_table.py  20260503_0002_add_method_traceability_fields.py  20260503_0003_increase_method_fair_odd_precision.py
app/: main.py
app/api/: router.py
app/api/routes/: health.py  methods.py
app/core/: config.py
app/domain/: __init__.py  enums.py
app/models/: __init__.py  method.py
app/repositories/: __init__.py  method_repository.py
app/schemas/: __init__.py  method.py
app/services/: __init__.py  method_service.py
tests/: test_health.py  test_method_model.py  test_method_routes.py  test_method_schema.py  test_method_service.py
